<?xml version="1.0"?>
<package format="2">
  <name>ur_startup</name>
  <version>0.1.0</version>
  <description>The ur_startup package, based on RComponent structure. Node for initialize a program from Polyscope</description>

  <maintainer email="rvasquez@robotnik.es">Robert Vasquez Zavaleta</maintainer>

  <author email="rvasquez@robotnik.es">Robert Vasquez Zavaleta</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>rcomponent</build_depend>

  <build_export_depend>rospy</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>
  <exec_depend>rcomponent</exec_depend>

  <export>

  </export>
</package>
